Bug fix: stop elements jumping around during selection

--- a/features/faceid/faceid.css
+++ b/features/faceid/faceid.css
@@ -1,5 +1,6 @@
 .hidden {
-	display: none;
+	visibility: hidden;
+	display: block;
 }
 
 #tooltip {
